; ModuleID = '/home/carl/AnghaBench/systemd/src/network/generator/extr_network-generator.c_network_set_address.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/generator/extr_network-generator.c_network_set_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.in_addr_union = type { i32 }

@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8, %union.in_addr_union*, %union.in_addr_union*)* @network_set_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @network_set_address(i32* %0, i8* %1, i32 %2, i8 zeroext %3, %union.in_addr_union* %4, %union.in_addr_union* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8, align 1
  %12 = alloca %union.in_addr_union*, align 8
  %13 = alloca %union.in_addr_union*, align 8
  %14 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i8 %3, i8* %11, align 1
  store %union.in_addr_union* %4, %union.in_addr_union** %12, align 8
  store %union.in_addr_union* %5, %union.in_addr_union** %13, align 8
  %15 = load i32, i32* %10, align 4
  %16 = load %union.in_addr_union*, %union.in_addr_union** %12, align 8
  %17 = call i64 @in_addr_is_null(i32 %15, %union.in_addr_union* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %36

20:                                               ; preds = %6
  %21 = load i32*, i32** %8, align 8
  %22 = load i8*, i8** %9, align 8
  %23 = call i32* @network_get(i32* %21, i8* %22)
  store i32* %23, i32** %14, align 8
  %24 = load i32*, i32** %14, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %29, label %26

26:                                               ; preds = %20
  %27 = load i32, i32* @ENODEV, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %7, align 4
  br label %36

29:                                               ; preds = %20
  %30 = load i32*, i32** %14, align 8
  %31 = load i32, i32* %10, align 4
  %32 = load i8, i8* %11, align 1
  %33 = load %union.in_addr_union*, %union.in_addr_union** %12, align 8
  %34 = load %union.in_addr_union*, %union.in_addr_union** %13, align 8
  %35 = call i32 @address_new(i32* %30, i32 %31, i8 zeroext %32, %union.in_addr_union* %33, %union.in_addr_union* %34, i32* null)
  store i32 %35, i32* %7, align 4
  br label %36

36:                                               ; preds = %29, %26, %19
  %37 = load i32, i32* %7, align 4
  ret i32 %37
}

declare dso_local i64 @in_addr_is_null(i32, %union.in_addr_union*) #1

declare dso_local i32* @network_get(i32*, i8*) #1

declare dso_local i32 @address_new(i32*, i32, i8 zeroext, %union.in_addr_union*, %union.in_addr_union*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
